--- a/sesion.html
+++ b/sesion.html
@@ -1,8 +1,11 @@
 <!DOCTYPE HTML>
 <!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+@autor Eduardo Lopez Lopez – Autor() del código. 
+@copyright Información de derechos de autor (Tiees 2020)
+@return    Modulo de inicio de sesion para usuarios
+@see       Metodo post
+@version – Version 1.4 15/05/20. 
+
 -->
 <html>
 	<head>
